0.8.1-beta to current

	Added summary to builtin tree implementation.  Thanks to aleksejrs.

	Fixed reopening controlling terminal across users.  Thanks to aleksejrs.

	Fixed :autocmd being not whole line command (was terminated by |).  Thanks
	to aleksejrs.

0.8 to 0.8.1-beta

	Turned remote commands back on by default after their rewrite using
	named pipes instead of insecure UDP sockets.

	Removed vifmrc-converter.  It's been around for four years and not needed
	any more.  Thanks to filterfalse.

	Removed contents of autoconf.sh, autoreconf covers what was there (there
	is a notice in that script now about it just in case).  Thanks to Hendrik
	Jaeger (a.k.a. henk).

	Changed 'fusehome' default from temporary directory to data directory (that
	is $XDG_DATA_HOME/.local/share/fuse/ or $VIFM/fuse/ depending on which
	parent directory exists, the second one exists by definition, but first
	might not).  Thanks to aleksejrs and to Hendrik Jaeger (a.k.a. henk).

	Added :winc[md] command-line command.  Thanks to fogine.

	Added layoutis() builtin function that answers queries about current
	interface configuration.  Thanks to fogine.

	Added paneisat() builtin function that answers queries about current pane
	position.  Thanks to fogine.

	Added %pc macro that splits preview command in two pices: preview command
	and clear command.  Thanks to Tomek K. (a.k.a. TomiCode).

	Added set of :*Vim commands to vifm run from Vim plugin, which overrule
	initial :*Vifm command behaviour.  Thanks to Ross Hadden (a.k.a.
	rosshadden).

	Added special treatment for "*" as value of 'slowfs', which might be
	useful in case of very slow handling of requests to mounts enumeration.
	Patch by Cosmin Popescu (a.k.a. cosminadrianpopescu).

	Added handling of "-" command-line argument specified in place of
	directory path as instruction to read list of files from stdin.

	Added B key to menus, which acts like b, but creates unsorted (very
	custom) view.  Thanks to filterfalse.
