@@ -2,6 +2,8 @@
 
 	Added summary to builtin tree implementation.  Thanks to aleksejrs.
 
+	Case insensitive completion of autocommand name for :autocmd command.
+
 	Fixed reopening controlling terminal across users.  Thanks to aleksejrs.
 
 	Fixed :autocmd being not whole line command (was terminated by |).  Thanks
